--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "react-scripts": "3.0.1",
+    "react-tag-cloud": "^1.3.2",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
   },
