--- a/client/package.json
+++ b/client/package.json
@@ -2,12 +2,15 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "dependencies": {
+    "randomcolor": "^0.5.4",
     "react": "^16.8.6",
+    "react-d3-cloud": "^0.7.0",
     "react-dom": "^16.8.6",
+    "react-measure": "^2.3.0",
     "react-redux": "^7.1.0",
     "react-scripts": "3.0.1",
-    "react-tag-cloud": "^1.3.2",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
   },
