data carries across page changes

--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:3001",
   "dependencies": {
+    "connected-react-router": "^6.5.2",
     "randomcolor": "^0.5.4",
     "react": "^16.8.6",
     "react-d3-cloud": "^0.7.0",
