--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "react": "^16.8.6",
     "react-d3-cloud": "^0.7.0",
     "react-dom": "^16.8.6",
+    "react-flash-message": "^1.0.2",
     "react-measure": "^2.3.0",
     "react-redux": "^7.1.0",
     "react-router": "^5.0.1",
@@ -16,7 +17,7 @@
     "react-scripts": "3.0.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "victory": "^32.3.3"
+    "victory": "^32.3.4"
   },
   "scripts": {
     "start": "react-scripts start",
